<resources>
    <string name="app_name">SedentairApp</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push notifications</string>
    <string name="sound">Sound</string>
    <string name="test_mp3">test.mp3</string>
    <string name="vibration">Vibration</string>
    <string name="app_color">App Color</string>
    <string name="home">Home</string>
    <string name="notif_txt_cancel"><u>Got it!</u></string>
    <string name="notif_txt_info"><u>More info</u></string>
</resources>
