<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.vdbrandtmedia.sedentairapp.Settings">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="25dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="?attr/actionModeCloseDrawable"
            android:id="@+id/homeBtn"
            android:background="@android:color/transparent"
            android:layout_marginRight="16dp"
            android:onClick="goToParent"/>

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:text="Settings"
            android:layout_marginLeft="16dp"
            android:gravity="left" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_marginLeft="16dp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:text="@string/notifications"
                    android:textSize="22sp" />

                <TextView
                    android:text="@string/push_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_below="@+id/textView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="16dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox5"
                    android:layout_alignBaseline="@+id/textView2"
                    android:layout_alignBottom="@+id/textView2"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="32dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/dividerLine"
                android:id="@+id/divider1"
                android:layout_height="0.3dp">

            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:text="@string/test_mp3"
                    android:layout_below="@id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="18sp"
                    android:textColor="@color/theme1TextUnder" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox2"
                    android:layout_marginEnd="32dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/dividerLine"
                android:id="@+id/divider2"
                android:layout_height="0.3dp">
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/vibration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Standing"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox3"
                    android:layout_alignBaseline="@+id/Standing"
                    android:layout_alignBottom="@+id/Standing"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="32dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/dividerLine"
                android:id="@+id/divider3"
                android:layout_height="0.3dp">
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_marginLeft="16dp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:text="@string/app_color"
                    android:layout_marginBottom="10dp"
                    android:textSize="22sp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/textView7">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox8"
                        android:layout_weight="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="16dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox7"
                        android:layout_weight="0"
                        android:layout_marginRight="16dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox6"
                        android:layout_weight="0"
                        android:layout_marginRight="16dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox4"
                        android:layout_weight="0"
                        android:layout_marginRight="16dp" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/dividerLine"
                android:id="@+id/divider4"
                android:layout_height="0.3dp">

            </RelativeLayout>


            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:layout_marginLeft="16dp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:text="App Rights"
                    android:textSize="22sp" />

                <TextView
                    android:text="@string/push_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_below="@+id/textView9"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="16dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox9"
                    android:layout_alignBaseline="@+id/textView10"
                    android:layout_alignBottom="@+id/textView10"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="32dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/dividerLine"
                android:id="@+id/divider5"
                android:layout_height="0.3dp">

            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox10"
                    android:layout_alignBaseline="@+id/textView11"
                    android:layout_alignBottom="@+id/textView11"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="32dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/dividerLine"
                android:id="@+id/divider6"
                android:layout_height="0.3dp">
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Audio files"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox12"
                    android:layout_alignBaseline="@+id/textView12"
                    android:layout_alignBottom="@+id/textView12"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="32dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/dividerLine"
                android:id="@+id/divider7"
                android:layout_height="0.3dp">
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/finalPadding">
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
